--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,8 +25,8 @@ jobs: # 실제 실행될 내용
         python update.py
     - name: Commit changes # 3) 추가된 파일 commit
       run: |
-        git config --local user.name 'thisisubin' # 유저명
-        git config --local user.email 'bm1418109@gmail.com' # 유저 이메일
+        sudo git config --global user.name 'thisisubin' # 유저명
+        sudo git config --global user.email 'bm1418109@gmail.com' # 유저 이메일
         git add -A
         git commit -am "auto update README.md" # 커밋 메시지
     - name: Push changes # 4) 메인에 푸시
